--- a/app/views/catalog/_document_thumbnail.html.erb
+++ b/app/views/catalog/_document_thumbnail.html.erb
@@ -1,5 +1,12 @@
 <% resultClass, resultIcon, resultThumb = document_thumbnail( document ) %>
-<%= link_to document, :class => 'dams-search-thumbnail-link' do %>
+<%
+    if is_collection?(document)
+      url = dams_collection_path(document, :counter => opts[:counter] )
+    else
+      url = dams_object_path(document, :counter => opts[:counter] )
+    end
+%>
+<%= link_to url, :class => 'dams-search-thumbnail-link' do %>
   <% if !resultThumb.blank? %>
 	<%= image_tag resultThumb, :alt => "", :class => 'dams-search-thumbnail' %>
   <% else %>
