Adding dynamic form control to new Object form. DHH-288

--- a/app/views/dams_objects/new.html.erb
+++ b/app/views/dams_objects/new.html.erb
@@ -26,6 +26,8 @@
   <%= render :partial => 'shared/edit_fields/creator_form' , :locals => {:f => f, :object_type => "dams_object"}%>
         
   <%= render :partial => 'shared/edit_fields/rights_form' , :locals => {:f => f, :object_type => "dams_object"}%>
+  
+  <%= render :partial => 'shared/edit_fields/rights_holder_form' , :locals => {:f => f, :object_type => "dams_object"}%>
     
   <%= render :partial => 'shared/edit_fields/related_resource_form' , :locals => {:f => f, :object_type => "dams_object"}%>
 
