--- a/app/views/catalog/_paginate_compact.html.erb
+++ b/app/views/catalog/_paginate_compact.html.erb
@@ -1,5 +1,5 @@
 <% if @response.total_pages > 1 %>
 <%= paginate @response, :theme => 'ucsd' %>
 <% else %>
-<%= render_pagination_info(@response) %>
+<%= page_entries_info(@response) %>
 <% end %>
