--- a/app/views/catalog/index.html.erb
+++ b/app/views/catalog/index.html.erb
@@ -13,8 +13,12 @@
 
 		<% else %>
 
-			<% @page_title = t('blacklight.search.title', :application_name => application_name) %>
-			<% extra_head_content << render_opensearch_response_metadata.html_safe %>
+          <% @page_title = t('blacklight.search.title', :application_name => application_name) %>
+          <% content_for(:head) do -%>
+            <%= render_opensearch_response_metadata %>
+            <%= auto_discovery_link_tag(:rss, url_for(params.merge(:format => 'rss')), :title => t('blacklight.search.rss_feed') ) %>
+            <%= auto_discovery_link_tag(:atom, url_for(params.merge(:format => 'atom')), :title => t('blacklight.search.atom_feed') ) %>
+          <% end -%>
 
 	    <h2 class="hide-text top-content-title"><%= t('blacklight.search.search_results_header') %></h2>
 	    <%= render 'sort_and_per_page' %>
