--- a/app/views/layouts/ucsdlib.html.erb
+++ b/app/views/layouts/ucsdlib.html.erb
@@ -14,6 +14,7 @@
 				<%= auto_discovery_link_tag :rss, dams_object_path(params[:id]) + ".rdf", :title=>'RDF/XML', :type=> 'application/rdf+xml' %>
 			<% end %>
 		<% end %>
+		<% yield :head %>
 	</head>
 
 	<% onload_text = "$('input#q').focus();" if params[:q].to_s.empty? and params[:f].to_s.empty? and params[:id].nil? %>
@@ -21,10 +22,6 @@
 	<body onload="<%= onload_text %>" class="<%= render_body_class %>">
 
 		<%= render :partial => 'layouts/header' %>
-
-		<section id="search-found" class="container-fluid hidden-phone">
-			<%= topbar_items.join('').html_safe %>
-		</section>
 
 		<section id="messages" class="container-fluid">
 			<%= render :partial=>'/flash_msg' %>
