Updating note indexing so generic notes are indexed in otherNote_tesim and otherNote_json_tesim instead of being mixed in with note_tesim.  This keeps the record display the same and gets rid of duplicate note values in search results (DHH-317)

--- a/app/views/shared/fields/_note.html.erb
+++ b/app/views/shared/fields/_note.html.erb
@@ -17,7 +17,7 @@
 
   # parse notes
   notes = []
-  data = @document["#{prefix}note_json_tesim"]
+  data = @document["#{prefix}otherNote_json_tesim"]
   if data != nil
     data.each do |n|
       note = JSON.parse(n)
