--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
 
         <ul class="nav">
           <li><%= link_to 'Home', root_path %></li>
-
+          <li><%= link_to 'About', about_path %></li>
           <!-- Link to general browse by collection, format and topic page -->
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse By <b class="caret"></b></a>
@@ -26,6 +26,16 @@
               <li><%= link_to 'Collection', dams_collections_path %></li>
               <li><%= link_to 'Format', catalog_facet_path("object_type_sim", :'facet.sort' => 'index') %></li>
               <li><%= link_to 'Topic', catalog_facet_path("subject_topic_sim", :'facet.sort' => 'index') %></li>
+            </ul>
+          </li>
+
+         <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="mailto:dlp@ucsd.edu">Contact</a></li>
+              <li><%= link_to 'FAQ', faq_path %></li>
+              <li><%= link_to 'Search Tips', search_tips_path%>
+              <li><%= link_to 'Take Down Policy', takedown_path %></li>
             </ul>
           </li>
 
@@ -56,22 +66,13 @@
             <li><%= link_to 'Sign Out', destroy_user_session_path %></li>
           <% else %>
             <li>
-
               <%= link_to 'Sign In', new_user_session_path %>
             </li>
           <% end %>
           <li>
             <%= link_to 'The Library', 'http://libraries.ucsd.edu/' %>
           </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to 'About', about_path %></li>
-              <li><a href="mailto:dlp@ucsd.edu">Contact</a></li>
-              <li><%= link_to 'FAQ', faq_path %></li>
-              <li><%= link_to 'Take Down Policy', takedown_path %></li>
-            </ul>
-          </li>
+ 
         </ul>
       </nav>
     </div>
