Adding linebreaks to notes

--- a/app/views/shared/fields/_custodial_responsibility_note.html.erb
+++ b/app/views/shared/fields/_custodial_responsibility_note.html.erb
@@ -19,7 +19,7 @@
 	 		custodialResponsibilityNote = JSON.parse(datum)
 	 		if !custodialResponsibilityNote['value'].blank?				
 %>
-				<p><%= auto_link(custodialResponsibilityNote['value'].gsub('""', '"')) %></p>
+				<p><%= auto_link(custodialResponsibilityNote['value'].gsub('""', '"').gsub("\n","<br/>")) %></p>
 <%
 			end			
 		end
