--- a/app/views/shared/fields/_scopeOfContent.html.erb
+++ b/app/views/shared/fields/_scopeOfContent.html.erb
@@ -26,7 +26,7 @@
 			scopeContentNote = JSON.parse(datum)
 			if !scopeContentNote['value'].blank?	
 %>
-				<p><%= auto_link(scopeContentNote['value'].gsub('""', '"')) %></p>
+				<p><%= auto_link(scopeContentNote['value'].gsub('""', '"').gsub("\n","<br/>")) %></p>
 <%
 			end			
 		end
