--- a/app/assets/stylesheets/home-page.css
+++ b/app/assets/stylesheets/home-page.css
@@ -60,4 +60,5 @@ footer{margin-top:0;}
     .cat-library, .cat-rci{background-size:66%,66%;}
     .invitation{padding:0;}
     #browse-by{text-align:center;}
+    #bg-meta p{font-size:0.75em;}
 }
