--- a/app/views/shared/fields/_unit.html.erb
+++ b/app/views/shared/fields/_unit.html.erb
@@ -19,8 +19,8 @@
 
 		 unit = JSON.parse(fieldData.first)
 %>
-	<ul class="unstyled">
-        <!-- <li><%= link_to unit['name'], catalog_index_path( {'f[unit_sim][]' => unit['name']} ) %></li> -->
+	<ul>
+    <%#= link_to unit['name'], catalog_index_path( {'f[unit_sim][]' => unit['name']} ) %>
 		<li><%= unit['name'] %></li>
 	</ul>
 <%
