--- a/app/views/dams_collections/_search.html.erb
+++ b/app/views/dams_collections/_search.html.erb
@@ -1,18 +1,12 @@
+
+
 <div class="input-append">
 <%= form_tag catalog_index_url, :method => :get do %>
 	<input type="hidden" name="f[collection_sim][]" value="<%=@collection_title%>"/>
-	<input type="text" placeholder="Search collection..." name="q" id="q">
-	<button class="btn btn-primary" type="submit" id="">
+	<input type="text" placeholder="Search this collection..." name="q" id="q">
+	<button class="btn btn-inverse" type="submit" id="">
 		<i class="icon-search icon-white"></i>
 	</button>
 <% end %>
 </div>
 
-<p class="sidebar-header"><b>Collection Tools</b></p>
-<ul class="unstyled sidebar-button-list">
-	<li><%= link_to "<i class='icon-eye-open'></i> View items in this collection".html_safe, facet_uri(@collection_title,'collection_sim'), :class => 'btn btn-link' %></li>
-  <% if can? :update, @document then %>
-		<li><%= link_to "<i class='icon-eye-open'></i> View RDF document".html_safe, normalized_rdf_path(@document['id']), class: 'btn btn-link' %>
-  <% end %>
-
-</ul>
