--- a/app/views/shared/fields/_corporate_name.html.erb
+++ b/app/views/shared/fields/_corporate_name.html.erb
@@ -1,11 +1,11 @@
 <%
 	if defined?(componentIndex) # Then we're working with a component
 		prefix = "component_#{componentIndex}_"
-		htmlOpen = "<tr><td>%s</td><td><ul class='unstyled'>"
+		htmlOpen = "<tr><td>%s</td><td><ul>"
 		htmlClose = "</ul></td></tr>"
 	else # We're working with an object or collection
 		prefix = ''
-		htmlOpen = "<dt>%s</dt><dd><ul class='unstyled'>"
+		htmlOpen = "<dt>%s</dt><dd><ul>"
 		htmlClose = "</ul></dd>"
 	end
 
