Added CSS for h2 (DHH-249)

--- a/app/assets/stylesheets/custom-collections.css.scss
+++ b/app/assets/stylesheets/custom-collections.css.scss
@@ -44,9 +44,8 @@
 
   }
 
-  h1, h2{line-height:normal;margin:0;padding-bottom:0;text-shadow: 0px 0px 3px rgba(0,0,0,0.5);}
-  h1{color:#fff;font-weight: normal;}
-  h2{color:#666;}
+  h1, h2{line-height:normal;margin:0;padding-bottom:0;text-shadow: 0px 0px 3px rgba(0,0,0,0.5);color:#fff;font-weight: normal;}
+  h2{color:rgba(255,255,255,0.75);}
 
 
 }
