--- a/app/views/shared/fields/_temporal.html.erb
+++ b/app/views/shared/fields/_temporal.html.erb
@@ -19,7 +19,7 @@
 		fieldData.each do |datum|
 			temporal = datum
 %>
-			<li><%= link_to "<i class='icon-tag icon-white'></i> #{temporal}".html_safe, facet_uri(temporal, 'subject_temporal_sim'), :class => "label" %></li>
+			<li><%= link_to "<i class='icon-tag icon-white'></i> #{temporal}".html_safe, facet_uri(temporal, 'subject_topic_sim'), :class => "label" %></li>
 <%
 		end
 
