--- a/app/views/shared/fields/_conference_name.html.erb
+++ b/app/views/shared/fields/_conference_name.html.erb
@@ -19,7 +19,7 @@
 		fieldData.each do |datum|
 			conferenceName = datum
 %>
-			<li><%= link_to "<i class='icon-tag icon-white'></i> #{conferenceName}".html_safe, facet_uri(conferenceName, 'subject_conferenceName_sim'), :class => "label" %></li>
+			<li><%= link_to "<i class='icon-tag icon-white'></i> #{conferenceName}".html_safe, facet_uri(conferenceName, 'subject_topic_sim'), :class => "label" %></li>
 <%
 		end
 
