--- a/app/views/shared/fields/_cultural_context.html.erb
+++ b/app/views/shared/fields/_cultural_context.html.erb
@@ -19,7 +19,7 @@
 		fieldData.each do |datum|
 			culturalContext = datum
 %>
-			<li><%= link_to "<i class='icon-tag icon-white'></i> #{culturalContext}".html_safe, facet_uri(culturalContext, 'subject_culturalContext_sim'), :class => "label" %></li>
+			<li><%= link_to "<i class='icon-tag icon-white'></i> #{culturalContext}".html_safe, facet_uri(culturalContext, 'subject_topic_sim'), :class => "label" %></li>
 <%
 		end
 
