--- a/app/views/shared/fields/_style_period.html.erb
+++ b/app/views/shared/fields/_style_period.html.erb
@@ -19,7 +19,7 @@
 		fieldData.each do |datum|
 			stylePeriod = datum
 %>
-			<li><%= link_to "<i class='icon-tag icon-white'></i> #{stylePeriod}".html_safe, facet_uri(stylePeriod, 'subject_stylePeriod_sim'), :class => "label" %></li>
+			<li><%= link_to "<i class='icon-tag icon-white'></i> #{stylePeriod}".html_safe, facet_uri(stylePeriod, 'subject_topic_sim'), :class => "label" %></li>
 <%
 		end
 
