--- a/app/views/shared/fields/_technique.html.erb
+++ b/app/views/shared/fields/_technique.html.erb
@@ -19,7 +19,7 @@
 		fieldData.each do |datum|
 			technique = datum
 %>
-			<li><%= link_to "<i class='icon-tag icon-white'></i> #{technique}".html_safe, facet_uri(technique, 'subject_technique_sim'), :class => "label" %></li>
+			<li><%= link_to "<i class='icon-tag icon-white'></i> #{technique}".html_safe, facet_uri(technique, 'subject_topic_sim'), :class => "label" %></li>
 <%
 		end
 
