Fixed double quotes showing up for Titles. DHH-337

--- a/app/views/shared/fields/_title.html.erb
+++ b/app/views/shared/fields/_title.html.erb
@@ -8,9 +8,9 @@
 	<hgroup>
 	<% fieldData.each do |datum| %>
 		<% title = JSON.parse(datum) %>
-		<h1><%= title['value'] %></h1>
+		<h1><%= title['value'].gsub('""', '"') %></h1>
 		<% if title['subtitle'] != [] %>
-			<h2><%= title['subtitle'] %></h2>
+			<h2><%= title['subtitle'].gsub('""', '"') %></h2>
 		<% end %>
 		<% break %>
 	<% end %>
