--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
 		</address>
 		<p>Copyright © 2013 Regents of the University of California. All rights reserved.</p>
 		<ul class="inline">
-			<li><a href="#terms">Terms &amp; Conditions</a></li>
+			<li><a href="http://www.ucsd.edu/_about/legal/index.html">Terms &amp; Conditions</a></li>
 			<li class="muted">|</li>
 			<li><a href="mailto:dlp@ucsd.edu">Feedback</a></li>
 		</ul>
