--- a/app/views/dams_objects/_image_viewer.html.erb
+++ b/app/views/dams_objects/_image_viewer.html.erb
@@ -2,5 +2,9 @@
 <% if displayFilePath.length > 0 %>
    <%= link_to image_tag(displayFilePath, :alt => ''), zoomFilePath %>
 <% else %>
-	<%= link_to image_tag(filePath, :alt => ''), zoomFilePath %>
+	<% if getFilesType == "PDF" %>
+		<%= link_to image_tag(filePath, :alt => ''), pdfFilePath %>
+	<% else %>
+		<%= link_to image_tag(filePath, :alt => ''), zoomFilePath %>
+	<% end %>
 <% end %>
