--- a/app/views/dams_objects/_object_viewer.html.erb
+++ b/app/views/dams_objects/_object_viewer.html.erb
@@ -15,8 +15,10 @@
 					fileType = grabFileUse()
 					display_file = grabDisplayFile()
 					service_file = grabServiceFile()
+					pdf_file = grabPDFFile()
 					display_file_path = (display_file != 'no_display') ? file_path(ark,"_#{display_file}") : ''
 					service_file_path = (service_file != nil) ? file_path(ark,"_#{service_file}") : ''
+					pdf_file_path = (pdf_file != nil) ? file_path(ark, "_#{pdf_file}") : ''
 					zoom_file_path = zoom_path @document['id'], '0'
 					culturallySensitiveText = grabCulturallySensitiveText(@document["note_json_tesim"])
 				%>
@@ -37,6 +39,7 @@
 							           :display_file_path => display_file_path,
 							           :service_file_path => service_file_path,
 							           :service_file => service_file,
+							           :pdf_file_path => pdf_file_path,
 							           :zoom_file_path => zoom_file_path
 					           }
 					%>
