Updating search results pager display (DHH-319)

--- a/app/views/catalog/_sort_and_per_page.html.erb
+++ b/app/views/catalog/_sort_and_per_page.html.erb
@@ -1,19 +1,13 @@
 <div class="dams-search-results-header clearfix">
 
+	<div class="btn-toolbar results-tools hidden-phone">
+    <%= render :partial => 'sort_widget' %>
+    <%= render :partial => 'per_page_widget' %>
+	  <div class="btn-group"><%= link_to 'Advanced Search', advanced_path, :class => 'btn btn-inverse btn-mini' %></div>
+	</div>
+
   <div class="page_links">
-    <%= render :partial => 'paginate_compact' %>
+    <%= render :partial => 'paginate_about' %>
   </div>
-
-  <div class="dropdown pull-right hidden-phone" id="sort-dropdown">
-    <ul class="css-dropdown">
-      <li class="btn">
-        <%=link_to 'Advanced Search', advanced_path, :class => '' %>
-      </li>
-    </ul>
-  </div>
-
-  <%= render :partial => 'sort_widget' %>
-
-  <%= render :partial => 'per_page_widget' %>
 
 </div>
