--- a/app/assets/stylesheets/custom-search.css.scss
+++ b/app/assets/stylesheets/custom-search.css.scss
@@ -12,28 +12,61 @@
 #dams-search-results > li{list-style-type:none;margin:0 0 2em 0;padding:0;color:#555;}
 #dams-search-results > li h3{margin:0 0 0.25em 0;font-size:125%;line-height: inherit;font-weight:normal;}
 #dams-search-results > li a{text-decoration:underline;}
-
 #dams-search-results > li{overflow: auto;}
 #dams-search-results > li > img{display:block;width:70px;height:auto;margin:0;padding:0;float:left;}
 #dams-search-results > li > div{margin-left:90px;}
-
 .dams-search-thumbnail{display:block;width:70px;height:70px;margin:0 !important;padding:0;float:left;font-size:30px;text-align:center;line-height:70px;}
 .thumb-complex{background-color:#F3B46D;color:rgba(0,0,0,0.25);}
 .thumb-simple{background-color:#F3CD6D;color:rgba(0,0,0,0.25);}
 .thumb-collection{background-color:#F3876D;color:rgba(0,0,0,0.25);}
-
 .dams-search-results-fields{margin:0;padding:0;}
 .dams-search-results-fields li{margin-right:0.25em;list-style-type: none;}
 .dams-search-results-fields span{line-height: 90%;}
 .dams-search-results-fields-label {color:#F3876D; }
-
-.dams-search-results-header {color:#aaa;margin-bottom:2em;}
-.page_links strong{font-weight:normal;}
-
-.dams-search-constraints{margin-bottom: 2em;color:#333;}
-.dams-search-constraints-label{font-size:110%;line-height: inherit;}
+.dams-search-results-header{
+  color:#aaa;
+  margin-bottom:20px;
+  .btn-toolbar{margin:0;}
+}
+.dams-search-constraints{margin-bottom: 20px;color:#666;}
+.dams-search-constraints-label{font-size:100%;line-height: inherit;}
 .appliedFilter{margin-bottom: 0;}
 .dams-search-instead{color:#444;font-size:90%;}
+
+.dams-search-results-footer
+{
+  padding-top:20px;
+  border-top:1px solid #eee;
+  color:#888;
+  .btn
+  {
+    background-image:none;
+    border-color:#ccc;
+    color:#888;
+  }
+}
+
+.page_links
+{
+  font-size:13px;
+  line-height: normal;
+  clear:both;
+  overflow:auto;
+  strong{font-weight:normal;}
+}
+
+.results-tools
+{
+  float: right;
+  .results-btn
+  {
+    background-image:none;
+    background-color:#fff;
+    border-color:#ddd;
+    color:#777;
+  }
+
+}
 
 
 // FILTERS (BLUE PILLS)
@@ -139,8 +172,15 @@
 @media (max-width: 480px) {
 
   .dams-search-results-header {margin-bottom:1em;}
-  .sidenav{margin-bottom: 0;}
+  .sidenav{margin-bottom:0;}
+  .facets{margin-bottom:10px;}
+  .dams-search-results-footer{text-align:center;}
 
+  #dams-search-results > li h3{font-size:110%;}
+  .dams-search-results-fields{
+    font-size:90%;
+    li{line-height: normal;}
+  }
   .search-results-pager > span > span, .search-results-pager a > span{display:none;}
 
 }
