--- a/app/views/shared/edit_fields/_assembled_collections_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_assembled_collections_edit_form.html.erb
@@ -7,7 +7,7 @@
 %>
 			<div class="fields">
 				<br/>
-				<%= select_tag "#{object_type}[assembledCollectionURI][]", options_for_select(@dams_assembled_collections, :selected => "#{Rails.configuration.id_namespace}#{assembledCollection[i].pid}") , :prompt=>"Select Assembled Collection", :class=>"assembledCollectionClass#{i}", :onChange=>"javascript: checkOption(this.className,false,'dams_assembled_collections');"%>
+				<%= select_tag "#{object_type}[assembledCollectionURI][]", options_for_select(@dams_assembled_collections, :selected => "#{Rails.configuration.id_namespace}#{assembledCollection[i].pid}") , :prompt=>"Select Assembled Collection", :class=>"assembledCollectionClass#{i}", :id=>"assembledCollectionId#{i}", :onChange=>"javascript: checkOption(this.className,false,'dams_assembled_collections');"%>
 				<br/>
     			<%= link_to_remove_fields "Remove Assembled Collection", f %>				
 			</div>					
@@ -19,7 +19,7 @@
 %>
 		<div class="fields">
 			<br/>
-			<%= select_tag "#{object_type}[assembledCollectionURI][]", options_for_select(@dams_assembled_collections) , :prompt=>"Select Assembled Collection", :class=>"assembledCollectionClass#{i}", :onChange=>"javascript: checkOption(this.className,false,'dams_assembled_collections');"%>
+			<%= select_tag "#{object_type}[assembledCollectionURI][]", options_for_select(@dams_assembled_collections) , :prompt=>"Select Assembled Collection", :class=>"assembledCollectionClass#{i}", :id=>"assembledCollectionId#{i}", :onChange=>"javascript: checkOption(this.className,false,'dams_assembled_collections');"%>
 			<br/>
 			<%= link_to_remove_fields "Remove Assembled Collection", f %>				
 		</div>	
