--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,6 +11,8 @@
 			<li><a href="http://www.ucsd.edu/_about/legal/index.html">Terms &amp; Conditions</a></li>
 			<li class="muted">|</li>
 			<li><a href="mailto:dlp@ucsd.edu">Feedback</a></li>
+		  <li class="muted">|</li>
+		  <li><a href="http://libraries.ucsd.edu/">Library Home</a></li>
 		</ul>
 	</section>
 </footer>
