--- a/app/views/layouts/ucsdlib.html.erb
+++ b/app/views/layouts/ucsdlib.html.erb
@@ -33,5 +33,8 @@
 
 		<%= render :partial => 'layouts/footer' %>
 
+		<!-- use an image bug to keep the Shibboleth session alive -->
+		<img src="https://a4.ucsd.edu/tritON/imagebug">
+
 	</body>
 </html>
