--- a/app/views/shared/edit_fields/_language_fields.html.erb
+++ b/app/views/shared/edit_fields/_language_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="fields">
     <br/>
-	<%= f.select :id, options_for_select(@mads_languages, :selected => "#{Rails.configuration.id_namespace}#{@language_id}") , {:include_blank => 'Select Language'}, :required => "true", :onChange=>"javascript: checkOption(this.id,true,'mads_languages');"%>    
+	<%= f.select :id, options_for_select(@mads_languages, :selected => "#{Rails.configuration.id_namespace}#{@language_id}") , {:include_blank => 'Select Language'}, :required => "true", :id=>"newClassNameLanguageId", :onChange=>"javascript: checkOption(this.id,true,'mads_languages');"%>    
     <br/>
     <% if (!is_first.nil? && is_first == "false") %>
     	<%= link_to_remove_fields "Remove Language", f %>
