Updated Feedback link to contact form.(DHH-330)

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,8 +10,8 @@
 		<ul class="inline">
 			<li><a href="http://www.ucsd.edu/_about/legal/index.html">Terms &amp; Conditions</a></li>
 			<li class="muted">|</li>
-			<li><a href="mailto:dlp@ucsd.edu">Feedback</a></li>
-		  <li class="muted">|</li>
+			<li><%= link_to 'Feedback', contact_path %></li>
+			<li class="muted">|</li>
 		  <li><a href="http://libraries.ucsd.edu/">Library Home</a></li>
 		</ul>
 	</section>
